Implement HTMLRewriter for inserting links

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "worker"
-type = "javascript"
+type = "webpack"
 account_id = "b6ecd4895dc7421f2dd5b38942966bab"
 workers_dev = true
 route = ""
